--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,18 +1,18 @@
 {
-  "CONTRACT_ADDRESS": "0x4170B5c959d88e31fE39c2f710A9764f602f88dF",
-  "SCAN_LINK": "https://rinkeby.etherscan.io/address/0x4170b5c959d88e31fe39c2f710a9764f602f88df",
+  "CONTRACT_ADDRESS": "0x7B5e52c09A668c3B79aDFFeeD44204b4e7907E1c",
+  "SCAN_LINK": "https://polygonscan.com/address/0x7b5e52c09a668c3b79adffeed44204b4e7907e1c",
   "NETWORK": {
-    "NAME": "Rinkeby",
-    "SYMBOL": "RETH",
-    "ID": 4
+    "NAME": "Polygon",
+    "SYMBOL": "MATIC",
+    "ID": 137
   },
-  "NFT_NAME": "Tiny Horror Club Test",
-  "SYMBOL": "THCT",
-  "MAX_SUPPLY": 50,
-  "WEI_COST": 20000000000000000,
-  "DISPLAY_COST": 0.02,
+  "NFT_NAME": "Tiny Horror Club",
+  "SYMBOL": "THCNFT",
+  "MAX_SUPPLY": 10000,
+  "WEI_COST": 10000000000000000000,
+  "DISPLAY_COST": 10,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://testnets.opensea.io/collection/tinyhorrorclubtest",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/tinyhorrorclub",
   "SHOW_BACKGROUND": true
 }
